--- a/static/css/ppl.css
+++ b/static/css/ppl.css
@@ -1,12 +1,38 @@
 body{
-    background-image: url(../images/ppl.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: var(--bgcolor);
+}
+:root{
+    --bgcolor:blue;
+}
+.dark-theme{
+    --bgcolor:magenta;
 }
 *{
     color: white;
-    padding: 15px
+    padding: 15px;
+    font-family: 'Crimes Times Six';
 }
+.up{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+#map {
+    height: 10vh;
+    width: 10vw;
+    background-color: var(--bgcolor);
+    border: 5px solid black;
+}
+.map{
+    font-size: 25px;
+    margin-top: 40px;
+}
+.end{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .welcome{
     font-size: 75px;
     font-style: italic;
