--- a/templates/index.html
+++ b/templates/index.html
@@ -53,14 +53,14 @@
 
         <section id="ppl">
             <div class="img">
-                <img src="../static/images/ppl.jpg">
+                <img src="../static/images/people tracker3.webp">
             </div>
             <div class="desc">
                 <div class="heading">
                     People Tracker
                 </div>
                 <div class="description">
-                    Yahan Kuch sexy sa description daal do
+                    Tracing footsteps to reveal untold stories
                     <div class="btn">
                         <form action="/people" method="get">
                             <button>Click Here!</button>
@@ -78,7 +78,7 @@
                     Timeline
                 </div>
                 <div class="description">
-                    Yahan Kuch sexy sa description daal do
+                    Tracing the past to illuminate the future.
                     <div class="btn">
                         <form action="/timeline" method="get">
                             <button>Click Here!</button>
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="img">
-                <img src="../static/images/ppl.jpg">
+                <img src="../static/images/timeline4.jpg">
             </div>
         </section>
         <div class="separator">
@@ -95,14 +95,14 @@
 
         <section id="search">
             <div class="img">
-                <img src="../static/images/ppl.jpg">
+                <img src="../static/images/search4.jpg">
             </div>
             <div class="desc">
                 <div class="heading">
                     Search
                 </div>
                 <div class="description">
-                    Yahan Kuch sexy sa description daal do
+                    Navigating the labyrinth of search, uncovering hidden truths
                     <div class="btn">
                         <form action="/search" method="get">
                             <button>Click Here!</button>
@@ -120,7 +120,7 @@
                     Profile
                 </div>
                 <div class="description">
-                    Yahan Kuch sexy sa description daal do
+                    The blueprint of a person's journey
                     <div class="btn">
                         <form action="/profile" method="get">
                             <button>Click Here!</button>
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="img">
-                <img src="../static/images/ppl.jpg">
+                <img src="../static/images/profile.jpg">
             </div>
         </section>
     </div>
