Made slight changes in style of profile page

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,10 +7,10 @@
   <body>
     <h2>Profile</h2>
     <p>Your username is: {{username}} </p>
-    <button><a href="/change-username">Change Username</a></button>
+    <button><a href="/changeUsername">Change Username</a></button>
     <p>Your email id is: {{ email }}</p>
-    <button><a href="/change-email">Change Email</a></button>
+    <button><a href="/changeEmail">Change Email</a></button>
     <p>Click the button below to change password</p>
-    <button><a href="change-password">Change Password</a></button>
+    <button><a href="changePassword">Change Password</a></button>
   </body>
 </html>
