--- a/templates/ppl.html
+++ b/templates/ppl.html
@@ -28,10 +28,10 @@
     <form action="/people" method="post">
         <label for="name">Name: </label>
         <input type="text" id="name" name="name" required>
-        <label for="Profession">Profession: </label>
-        <input type="text" id="Profession" name="Profession" required>
-        <label for="Details">Details: </label>
-        <input type="text" id="Details" name="Details" required>
+        <label for="profession">Profession: </label>
+        <input type="text" id="profession" name="profession" required>
+        <label for="details">Details: </label>
+        <input type="text" id="details" name="details" required>
         <div class="save">
             <button type="submit">Add to my people log</button>
         </div>
