--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,16 +1,59 @@
 <!DOCTYPE html>
-
-<html>
-  <head>
-    <title>Profile Page</title>
-  </head>
-  <body>
-    <h2>Profile</h2>
-    <p>Your username is: {{username}} </p>
-    <button><a href="/changeUsername">Change Username</a></button>
-    <p>Your email id is: {{ email }}</p>
-    <button><a href="/changeEmail">Change Email</a></button>
-    <p>Click the button below to change password</p>
-    <button><a href="changePassword">Change Password</a></button>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Edit your Profile</title>
+  <link rel="stylesheet" href="../static/css/profile.css">
+</head>
+<body>
+  <div class="main">
+    <div class="photo">
+      <img src="../static/images/user.jpg" alt="No photo uploaded">
+    </div>
+    <div class="info">
+      <h1>Welcome, {{username}}</h1>
+      <div class="separator"></div>
+      <div class="section">
+        <h3>
+          Add tags that describe you
+        </h3>
+        <button><a href="/addTags">Add Tags</a></button>
+      </div>
+      <div class="separator"></div>
+      <div class="section">
+        <h3>
+          Change your Username
+        </h3>
+        <p>Your username is: {{username}} </p>
+        <button><a href="/changeUsername">Change Username</a></button>
+      </div>
+      <div class="separator"></div>
+      <div class="section">
+        <h3>
+          Change your Email
+        </h3>
+        <p>Your current email id is: {{ email }}</p>
+        <button><a href="/changeEmail">Change Email</a></button>
+      </div>
+      <div class="separator"></div>
+      <div class="section">
+        <h3>
+          Change Password
+        </h3>
+        <p>Click the button below to change password</p>
+        <button><a href="changePassword">Change Password</a></button>
+      </div>
+    </div>
+  </div>
+</body>
 </html>
+  
+  <!-- <html>
+    <head>
+      <title>Profile Page</title>
+    </head>
+    <body>
+      <h2>Profile</h2>
+    </body>
+  </html> -->
