--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,45 +7,70 @@
   <link rel="stylesheet" href="../static/css/profile.css">
 </head>
 <body>
-  <div class="main">
-    <div class="photo">
-      <img src="../static/images/user.jpg" alt="No photo uploaded">
+  <div class="hero">
+    <div class="switch" id="icon">
+      <img src="../static/images/dark_light_switch.svg" alt="">
     </div>
-    <div class="info">
-      <h1>Welcome, {{username}}</h1>
-      <div class="separator"></div>
-      <div class="section">
-        <h3>
-          Add tags that describe you
-        </h3>
-        <button><a href="/addTags">Add Tags</a></button>
+    
+    <div class="main">
+      <div class="photo">
+        <img src="../static/images/user.jpg" alt="No photo uploaded">
+        <button><a href="/editProfilePic">Edit Profile Picture</a></button>
       </div>
-      <div class="separator"></div>
-      <div class="section">
-        <h3>
-          Change your Username
-        </h3>
-        <p>Your username is: {{username}} </p>
-        <button><a href="/changeUsername">Change Username</a></button>
-      </div>
-      <div class="separator"></div>
-      <div class="section">
-        <h3>
-          Change your Email
-        </h3>
-        <p>Your current email id is: {{ email }}</p>
-        <button><a href="/changeEmail">Change Email</a></button>
-      </div>
-      <div class="separator"></div>
-      <div class="section">
-        <h3>
-          Change Password
-        </h3>
-        <p>Click the button below to change password</p>
-        <button><a href="changePassword">Change Password</a></button>
+      <div class="info">
+        <h1>Welcome, {{username}}</h1>
+        <div class="separator"></div>
+        <div class="section">
+          <h3>
+            Add tags that describe you
+          </h3>
+          <button><a href="/addTags">Add Tags</a></button>
+        </div>
+        <div class="separator"></div>
+        <div class="section">
+          <h3>
+            Change your Username
+          </h3>
+          <p>Your username is: {{username}} </p>
+          <button><a href="/changeUsername">Change Username</a></button>
+        </div>
+        <div class="separator"></div>
+        <div class="section">
+          <h3>
+            Change your Email
+          </h3>
+          <p>Your current email id is: {{ email }}</p>
+          <button><a href="/changeEmail">Change Email</a></button>
+        </div>
+        <div class="separator"></div>
+        <div class="section">
+          <h3>
+            Change Password
+          </h3>
+          <p>Click the button below to change password</p>
+          <button><a href="changePassword">Change Password</a></button>
+        </div>
       </div>
     </div>
   </div>
+<script>
+  var icon = document.getElementById("icon");
+
+  icon.onclick = function () {
+      document.body.classList.toggle("dark-theme");
+
+      // Access the image inside the icon div
+      var img = icon.querySelector('img');
+
+      // Check if body has light-theme class
+      if (document.body.classList.contains("dark-theme")) {
+          img.src = "../static/images/light_mode.svg"; // Change the source to light mode image
+      } else {
+          img.src = "../static/images/dark_light_switch.svg"; // Change the source to dark mode image
+      }
+  }
+
+</script>
 </body>
 </html>
   
