Change in the theme of profile page

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,8 +14,8 @@
     
     <div class="main">
       <div class="photo">
-        <img src="../static/images/user.jpg" alt="No photo uploaded">
-        <button><a href="/editProfilePic">Edit Profile Picture</a></button>
+        <img src="../static/images/profile photo.jpg" alt="No photo uploaded">
+        <!-- <button><a href="/editProfilePic">Edit Profile Picture</a></button> -->
       </div>
       <div class="info">
         <h1>Welcome, {{username}}</h1>
