--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -4,16 +4,16 @@
     font-family: sans-serif;
 }
 :root{
-    --bgcolor:rgb(0, 255, 47);
-    --text:rgb(0, 76, 255);
-    --btn:magenta;
-    --btn_text:lime;
+    --bgcolor:rgba(177, 156, 31, 0.957);
+    --text:rgb(34, 25, 0);
+    --btn:rgba(37, 29, 0,0.9);
+    --btn_text:rgb(219, 189, 107);
 }
 .dark-theme{
-    --bgcolor:rgb(191, 255, 0);
+    --bgcolor:rgba(107, 87, 1, 0.979);
     --text:rgb(239, 239, 239);
-    --btn:magenta;
-    --btn_text:lime;
+    --btn:rgba(41, 29, 7, 0.65);
+    --btn_text:rgb(254, 238, 206);;
     
 }
 .hero{
@@ -36,7 +36,6 @@ body{
         width: 300px;
         height: 300px;
         border-radius: 50%;
-        background-color: aqua;
     }
 }
 @media only screen and (max-width: 768px){
@@ -57,12 +56,14 @@ body{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        
     }
 
 }
 h1{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Brush Script MT';;
     font-size: 35px;
+    letter-spacing: 2px;
 }
 .main{
     margin-top: 2vh;
@@ -97,4 +98,5 @@ button{
 }
 a{
     text-decoration: none;
+    color: var(--btn_text);
 }
