Added layout.html in changeUsername.html

--- a/templates/changeUsername.html
+++ b/templates/changeUsername.html
@@ -1,25 +1,24 @@
-<!DOCTYPE html>
+{% extends "layout.html" %}
 
-<html lang="en">
-  <head>
-    <title>Change Password</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  </head>
-  <body>
-    <form action="/changeUsername" method="post">
-      <div>
-          <label for="newUsername">New username:</label>
-          <input type="text" id="newUsername" name="newUsername" required>
-      </div>
-      <div>
-          <label for="password">Password:</label>
-          <input type="password" id="password" name="password" required>
-      </div>
-      <div>
-        <label for="confirmP">Confirm Password:</label>
-        <input type="password" id="confirmP" name="confirmP" required>
-      </div>
-      <button class="btn btn-primary" type="submit">Submit</button>
-    </form>
-  </body>
-</html>
+{% block title %}Change Username{% endblock %}
+{% block css %}{% endblock %}
+{% block js %}{% endblock %}
+
+
+{% block body %}
+  <form action="/changeUsername" method="post">
+    <div>
+        <label for="newUsername">New username:</label>
+        <input type="text" id="newUsername" name="newUsername" required>
+    </div>
+    <div>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+    </div>
+    <div>
+      <label for="confirmP">Confirm Password:</label>
+      <input type="password" id="confirmP" name="confirmP" required>
+    </div>
+    <button class="btn btn-primary" type="submit">Submit</button>
+  </form>
+{% endblock %}
