--- a/templates/changePassword.html
+++ b/templates/changePassword.html
@@ -1,25 +1,24 @@
-<!DOCTYPE html>
+{% extends "layout.html" %}
 
-<html lang="en">
-  <head>
-    <title>Change Password</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  </head>
-  <body>
-    <form action="/changePassword" method="post">
-      <div>
-          <label for="currentP">Current Password:</label>
-          <input type="password" id="currentP" name="currentP" required>
-      </div>
-      <div>
-          <label for="newP">New Password:</label>
-          <input type="password" id="newP" name="newP" required>
-      </div>
-      <div>
-        <label for="confirmNewP">Confirm New Password:</label>
-        <input type="password" id="confirmNewP" name="confirmNewP" required>
-      </div>
-      <button class="btn btn-primary" type="submit">Submit</button>
-    </form>
-  </body>
-</html>
+{% block title %}Change Password{% endblock %}
+{% block css %}{% endblock %}
+{% block js %}{% endblock %}
+
+
+{% block body %}
+  <form action="/changePassword" method="post">
+    <div>
+        <label for="currentP">Current Password:</label>
+        <input type="password" id="currentP" name="currentP" required>
+    </div>
+    <div>
+        <label for="newP">New Password:</label>
+        <input type="password" id="newP" name="newP" required>
+    </div>
+    <div>
+      <label for="confirmNewP">Confirm New Password:</label>
+      <input type="password" id="confirmNewP" name="confirmNewP" required>
+    </div>
+    <button class="btn btn-primary" type="submit">Submit</button>
+  </form>
+{% endblock %}
