Fixed profile and search routes not working

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,8 +18,8 @@
               <li><a href="/clue">Clue Organizer</a></li>
               <li><a href="/people">People Tracker</a></li>
               <li><a href="/timeline">Timeline</a></li>
-              <li><a href="#search">Search</a></li>
-              <li><a href="#profile">Profile</a></li>
+              <li><a href="/search">Search</a></li>
+              <li><a href="/profile">Profile</a></li>
               <li><a href="/logout">Log Out</a></li>
               <li>
                   <div class="switch" id="icon">
