--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Edit your Profile</title>
-  <link rel="stylesheet" href="../static/css/profile.css">
-</head>
-<body>
+{% extends "layout.html" %}
+
+{% block title %}Edit Your Profile{% endblock %}
+{% block css %}<link rel="stylesheet" href="../static/css/profile.css">{% endblock %}
+{% block js %}<script src="../static/javascript/profile.js"></script>{% endblock %}
+
+{% block body %}
   <div class="hero">
     <div class="switch" id="icon">
       <img src="../static/images/dark_light_switch.svg" alt="">
@@ -46,23 +44,4 @@
       </div>
     </div>
   </div>
-<script>
-  var icon = document.getElementById("icon");
-
-  icon.onclick = function () {
-      document.body.classList.toggle("dark-theme");
-
-      // Access the image inside the icon div
-      var img = icon.querySelector('img');
-
-      // Check if body has light-theme class
-      if (document.body.classList.contains("dark-theme")) {
-          img.src = "../static/images/light_mode.svg"; // Change the source to light mode image
-      } else {
-          img.src = "../static/images/dark_light_switch.svg"; // Change the source to dark mode image
-      }
-  }
-
-</script>
-</body>
-</html>
+{% endblock %}
