--- a/templates/layout.html
+++ b/templates/layout.html
@@ -28,6 +28,17 @@
               </li>
           </ul>
       </nav>
+
+      {% with message = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <ul class="flashes">
+                {% for category, message in messages %}
+                    <div class="{{ category }}">{{ messages }}</div>
+                {% endfor %}
+            </ul>
+        {% endif %}
+      {% endwith %}
+
       {% block body %}{% endblock %}
   </body>
 </html>
