--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,17 @@
 </head>
 
 <body>
+    <!-- Display flash messages -->
+    {% with message = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            <ul class="flashes">
+                {% for category, message in messages %}
+                    <div class="{{ category }}">{{ messages }}</div>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endwith %}
+    
     <nav>
         <ul>
             <!-- change these names to some epic unique names -->
