--- a/static/css/clue.css
+++ b/static/css/clue.css
@@ -7,6 +7,10 @@
   --text:rgb(255, 255, 255);
 
 }
+*{
+  padding: 0;
+  margin: 0;
+}
 @media only screen and (max-width: 768px) {
   body{
     text-align: center;
@@ -30,12 +34,12 @@ body{
     font-family: 'Crimes Times Six';
     font-style: italic;
     font-size: 30px;
-    padding: 20px;
 }
 .date{
   display: flex;
   justify-content: space-between;
   font-size: 15px;
+  padding-top: 100px;
 }
 .dateIn{
   display: flex;
