--- a/static/css/ppl.css
+++ b/static/css/ppl.css
@@ -9,7 +9,7 @@ body{
 }
 *{
     color: white;
-    padding: 15px;
+    padding: 0;
     font-family: 'Crimes Times Six';
 }
 .up{
@@ -32,11 +32,13 @@ body{
     justify-content: space-between;
     align-items: center;
 }
-
+.text{
+    font-size: 45px;
+}
 .welcome{
-    font-size: 75px;
+    font-size: 20px;
     font-style: italic;
-    /* pls someone look into how to put that epic font */
+    padding-top: 20vh;
 }
 label {
     display: block;
@@ -66,12 +68,11 @@ input[type="submit"]:hover {
 .save{
     color: #10188db2;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     button{
         padding: 30px;
         font-size: 20px;
         margin-top: 50px;
-        margin-right: 80px;
         border-radius: 15px;
         background-color: #179b59;
         font-weight: 700;
