--- a/templates/newTimeline.html
+++ b/templates/newTimeline.html
@@ -1,29 +1,51 @@
-<!DOCTYPE html>
+{% extends "layout.html" %}
 
-<html>
-  <head>
-    <title>Timeline</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  </head>
-  <body>
-    <center><h1 style="margin-bottom: 3%;"> Timeline </h1></center>
-    <table class="table table-striped table-hover">
-      <thead>
+{% block title %}Clue Organizer{% endblock %}
+{% block css %}
+<link rel="stylesheet" href="../static/css/timeline.css">{% endblock %}
+{% block js %}
+<script src="../static/javascript/profile.js"></script>{% endblock %}
+
+{% block body %}
+<div class="main">
+
+  <div class="heading">
+    Timeline
+  </div>
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>Category</th>
+        <th>Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for clue in clueData %}
         <tr>
-          <th>Date</th>
-          <th>Category</th>
-          <th>Description</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for clue in clueData %}
-          <tr>
-            <td>{{ clue.date }}</td>
-            <td>{{ clue.category }}</td>
-            <td>{{ clue.description }}</td>
-          </tr> 
-        {% endfor %}
-      </tbody>
-    </table>
-  </body>
-</html>
+          <td>{{ clue.date }}</td>
+          <td>{{ clue.category }}</td>
+          <td>{{ clue.description }}</td>
+        </tr> 
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
+    <script>
+      var icon = document.getElementById("icon");
+  
+  icon.onclick = function () {
+      document.body.classList.toggle("dark-theme");
+  
+      // Access the image inside the icon div
+      var img = icon.querySelector('img');
+  
+      // Check if body has light-theme class
+      if (document.body.classList.contains("dark-theme")) {
+          img.src = "../static/images/light_mode.svg"; // Change the source to light mode image
+      } else {
+          img.src = "../static/images/dark_light_switch.svg"; // Change the source to dark mode image
+      }
+  }
+  </script>
+{% endblock %}
