--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -19,6 +19,11 @@ body{
     width: 100%;
     height: 100%;
 }
+.flash{
+    position: relative;
+    z-index: 4;
+    height: 20px;
+}
 .heading{
     font-family: 'Crimes Times Six';
     color: rgb(255, 255, 255);
@@ -27,7 +32,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 .container {
     width: 80%;
