Added home option in navbar of index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,7 @@
     <nav>
         <ul>
             <!-- change these names to some epic unique names -->
+            <li><a href="/home">Home</a></li>
             <li><a href="#clue">Clue Organizer</a></li>
             <li><a href="#ppl">People Tracker</a></li>
             <li><a href="#timeline">Timeline</a></li>
