--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -1,61 +1,51 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Timeline Visualizer</title>
-    <meta name="description" content="All the events happened till now">
-    <link rel="stylesheet" href="../static/css/timeline.css">
-</head>
-<body>
-    <div class="main">
-        <h1>Let's see what has happened through the course of the time: </h1>
-        <div class="switch" id="icon">
-            <img src="../static/images/dark_light_switch.svg" alt="">
-        </div>
-        <div class="item">
-            <div class="grid-container">
-                <div class="grid-item circle">img here</div>
-                <div class="grid-item details">
-                    <div class="dive">
-                        <button>Dive deeper</button>
-                    </div>
-                </div>
-                <div class="grid-item circle">img here</div>
-                <div class="grid-item details"><div class="dive">
-                        <button>Dive deeper</button>
-                    </div></div>
-                <div class="grid-item circle">img here</div>
-                <div class="grid-item details"><div class="dive">
-                        <button>Dive deeper</button>
-                    </div></div>
-                <div class="grid-item circle">img here</div>
-                <div class="grid-item details"><div class="dive">
-                        <button>Dive deeper</button>
-                    </div></div>
-                <div class="grid-item circle">img here</div>
-                <div class="grid-item details"><div class="dive">
-                        <button>Dive deeper</button>
-                    </div></div>
-              </div>
-        </div>
-    </div>
+{% extends "layout.html" %}
+
+{% block title %}Clue Organizer{% endblock %}
+{% block css %}
+<link rel="stylesheet" href="../static/css/timeline.css">{% endblock %}
+{% block js %}
+<script src="../static/javascript/profile.js"></script>{% endblock %}
+
+{% block body %}
+<div class="main">
+
+  <div class="heading">
+    Timeline
+  </div>
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>Category</th>
+        <th>Description</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for clue in clueData %}
+        <tr>
+          <td>{{ clue.date }}</td>
+          <td>{{ clue.category }}</td>
+          <td>{{ clue.description }}</td>
+        </tr> 
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
     <script>
-        var icon = document.getElementById("icon");
-
-        icon.onclick = function () {
-            document.body.classList.toggle("dark-theme");
-
-            // Access the image inside the icon div
-            var img = icon.querySelector('img');
-
-            // Check if body has light-theme class
-            if (document.body.classList.contains("dark-theme")) {
-                img.src = "../static/images/light_mode.svg"; // Change the source to light mode image
-            } else {
-                img.src = "../static/images/dark_light_switch.svg"; // Change the source to dark mode image
-            }
-        }
-    </script>
-</body>
-</html>
+      var icon = document.getElementById("icon");
+  
+  icon.onclick = function () {
+      document.body.classList.toggle("dark-theme");
+  
+      // Access the image inside the icon div
+      var img = icon.querySelector('img');
+  
+      // Check if body has light-theme class
+      if (document.body.classList.contains("dark-theme")) {
+          img.src = "../static/images/light_mode.svg"; // Change the source to light mode image
+      } else {
+          img.src = "../static/images/dark_light_switch.svg"; // Change the source to dark mode image
+      }
+  }
+  </script>
+{% endblock %}
