--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -16,6 +16,9 @@
     --btn_text:rgb(254, 238, 206);;
     
 }
+li{
+    color: var(--text);
+}
 .hero{
     display: flex;
     justify-content: center;
@@ -66,7 +69,7 @@ h1{
     letter-spacing: 2px;
 }
 .main{
-    margin-top: 2vh;
+    margin-top: 14vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -84,10 +87,6 @@ p{
 }
 button{
     margin: 15px;
-}
-.switch{
-    padding-bottom: 30vh;
-    padding-left: 10vw;
 }
 button{
     padding: 10px;
