index page button text display fixed

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -91,6 +91,10 @@ section {
     font-size: 40px;
     font-family: 'Freestyle Script';
     padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .img{
