fixed bug in ppl.html

--- a/templates/ppl.html
+++ b/templates/ppl.html
@@ -23,6 +23,7 @@
             <input type="text" id="details" name="details" required>
             <div class="save">
                 <button type="submit">Add to my people log</button>
+            </div>
         </form>
     </div>
 </div>
