--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     text-align: center;
+    
 }
 html{
     scroll-behavior: smooth;
@@ -10,6 +11,10 @@ a{
     text-decoration: none;
     color: var(--nav_text);
 }
+li{
+    font-family: 'Crimes Times Six';
+}
+
 @media only screen and (max-width: 768px) {
     .main{
         display: flex;
