--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -14,7 +14,7 @@
   </div>
   <table class="table table-striped table-hover">
     <thead>
-      <tr>
+      <tr class="trHead">
         <th>Date</th>
         <th>Category</th>
         <th>Description</th>
