--- a/static/css/ppl.css
+++ b/static/css/ppl.css
@@ -40,6 +40,9 @@ body{
     font-style: italic;
     padding-top: 20vh;
 }
+input{
+    font-family: sans-serif;
+}
 label {
     display: block;
     margin-bottom: 5px;
