--- a/static/css/search.css
+++ b/static/css/search.css
@@ -1,3 +1,10 @@
 .hidden{
   display: none;
 }
+.main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 25vh;
+}
