Styling fixes for changing password, email and username

--- a/templates/changePassword.html
+++ b/templates/changePassword.html
@@ -1,11 +1,12 @@
 {% extends "layout.html" %}
 
 {% block title %}Change Password{% endblock %}
-{% block css %}{% endblock %}
+{% block css %} <link rel="stylesheet" href="../static/css/change.css">{% endblock %}
 {% block js %}{% endblock %}
 
 
 {% block body %}
+<div class="main">
   <form action="/changePassword" method="post">
     <div>
         <label for="currentP">Current Password:</label>
@@ -21,4 +22,5 @@
     </div>
     <button class="btn btn-primary" type="submit">Submit</button>
   </form>
+</div>
 {% endblock %}
