--- a/templates/changeUsername.html
+++ b/templates/changeUsername.html
@@ -2,7 +2,7 @@
 
 {% block title %}Change Username{% endblock %}
 
-{% block css %}<link rel="stylesheet" href="../static/css/username.css">{% endblock %} 
+{% block css %}<link rel="stylesheet" href="../static/css/change.css">{% endblock %} 
 {% block js %}{% endblock %}
 
 
