--- a/templates/changeEmail.html
+++ b/templates/changeEmail.html
@@ -1,10 +1,11 @@
 {% extends "layout.html" %}
 
 {% block title %}Change Email{% endblock %}
-{% block css %}{% endblock %}
+{% block css %} <link rel="stylesheet" href="../static/css/change.css">{% endblock %}
 {% block js %}{% endblock %}
 
 {% block body %}
+<div class="main">
   <form action="/changeEmail" method="post">
     <div>
         <label for="newEmail">Enter new email address:</label>
@@ -20,4 +21,5 @@
     </div>
     <button class="btn btn-primary" type="submit">Submit</button>
   </form>
+</div>
 {% endblock %}
