--- a/templates/signup.html
+++ b/templates/signup.html
@@ -7,8 +7,8 @@
     <title>Sign Up</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
     <link rel="stylesheet" href="../static/css/signup.css">
+    <script src="../static/javascript/signup.js"></script>
 </head>
 
 <body>
@@ -36,44 +36,26 @@
     </div>
     <div class="container" id="signup">
         <h2>Sign Up</h2>
-        <form action="/signup" method="post">
+        <form onsubmit="return validate()" action="/signup" method="post">
             <div>
-                <label for="new_username">Username:</label>
-                <input type="text" id="new_username" name="username" required>
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username">
             </div>
             <div>
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+                <input type="email" id="email" name="email">
             </div>
             <div>
-                <label for="create_password">Create Password:</label>
-                <input type="password" id="password" name="password" required>
+                <label for="password">Create Password:</label>
+                <input type="password" id="password" name="password">
             </div>
             <div>
-                <label for="confirm_password">Confirm Password:</label>
-                <input type="password" id="confirmP" name="confirmP" required>
+                <label for="confirmP">Confirm Password:</label>
+                <input type="password" id="confirmP" name="confirmP">
             </div>
             <input type="submit" value="Sign Up">
         </form>
     </div>
-    <script>
-        var icon = document.getElementById("icon");
-
-        icon.onclick = function () {
-            document.body.classList.toggle("dark-theme");
-
-            // Access the image inside the icon div
-            var img = icon.querySelector('img');
-
-            // Check if body has light-theme class
-            if (document.body.classList.contains("dark-theme")) {
-                img.src = "../static/images/light_mode.svg"; // Change the source to light mode image
-            } else {
-                img.src = "../static/images/dark_light_switch.svg"; // Change the source to dark mode image
-            }
-        }
-
-    </script>
 </body>
 
 </html>
