--- a/templates/search.html
+++ b/templates/search.html
@@ -11,7 +11,7 @@
     <form action="/search" method="POST">
         <label for="search">Select what you want to search</label>
         <select id="searchType">
-            <option disabled>Select</option>
+            <option disabled selected>Select</option>
             <option value="date">Date</option>
             <option value="people">People</option>
             <option value="clues">Clues</option>
