--- a/templates/timeline.html
+++ b/templates/timeline.html
@@ -12,24 +12,29 @@
   <div class="heading">
     Timeline
   </div>
-  <table class="table table-striped table-hover">
-    <thead>
-      <tr class="trHead">
-        <th>Date</th>
-        <th>Category</th>
-        <th>Description</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for clue in clueData %}
-        <tr>
-          <td>{{ clue.date }}</td>
-          <td>{{ clue.category }}</td>
-          <td>{{ clue.description }}</td>
-        </tr> 
-      {% endfor %}
-    </tbody>
-  </table>
+  {% if clueData %}
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr class="trHead">
+          <th>Date</th>
+          <th>Category</th>
+          <th>Description</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for clue in clueData %}
+          <tr>
+            <td>{{ clue.date }}</td>
+            <td>{{ clue.category }}</td>
+            <td>{{ clue.description }}</td>
+          </tr> 
+        {% endfor %}
+      </tbody>
+    </table>
+  {% endif %}
+  {% else %}
+    <h2> Nothing to show here. Add clues to display here</h2>
+  {% endelse %}
 </div>
     <script>
       var icon = document.getElementById("icon");
