--- a/templates/signup.html
+++ b/templates/signup.html
@@ -39,19 +39,19 @@
         <form onsubmit="return validate()" action="/signup" method="post">
             <div>
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username">
+                <input type="text" id="username" name="username" required>
             </div>
             <div>
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email">
+                <input type="email" id="email" name="email" required>
             </div>
             <div>
                 <label for="password">Create Password:</label>
-                <input type="password" id="password" name="password">
+                <input type="password" id="password" name="password" required>
             </div>
             <div>
                 <label for="confirmP">Confirm Password:</label>
-                <input type="password" id="confirmP" name="confirmP">
+                <input type="password" id="confirmP" name="confirmP" required>
             </div>
             <input type="submit" value="Sign Up">
         </form>
