--- a/templates/changeEmail.html
+++ b/templates/changeEmail.html
@@ -22,4 +22,18 @@
     <button class="btn btn-primary" type="submit">Submit</button>
   </form>
 </div>
+
+<script>
+  function validate() {
+    password = document.getElementById('password').value;
+    confirmP = document.getElementById('confirmP').value;
+
+    if (password != confirmP) {
+      alert("Password and confirmed password don't match")
+      return false;
+    }
+
+    return true;
+  }
+</script>
 {% endblock %}
