--- a/templates/changeEmail.html
+++ b/templates/changeEmail.html
@@ -6,7 +6,7 @@
 
 {% block body %}
 <div class="main">
-  <form action="/changeEmail" method="post">
+  <form onsubmit="return validate()" action="/changeEmail" method="post">
     <div>
         <label for="newEmail">Enter new email address:</label>
         <input type="email" id="newEmail" name="newEmail" required>
