Implemented checks in frontend in changePassword

--- a/templates/changePassword.html
+++ b/templates/changePassword.html
@@ -7,7 +7,7 @@
 
 {% block body %}
 <div class="main">
-  <form action="/changePassword" method="post">
+  <form onsubmit="return validate()" action="/changePassword" method="post">
     <div>
         <label for="currentP">Current Password:</label>
         <input type="password" id="currentP" name="currentP" required>
@@ -23,4 +23,34 @@
     <button class="btn btn-primary" type="submit">Submit</button>
   </form>
 </div>
+
+<script>
+  function validate() {
+  
+  var currentP = document.getElementById('currentP').value;
+  var newP = document.getElementById('newP').value;
+  var confirmNewP = document.getElementById('confirmNewP').value;
+
+  // Checking if new password and confirmed new password matches
+  if (newP != confirmNewP) {
+    alert("New password and confirmed new password don't match")
+    return false;
+  }
+
+  // Checking if the new password is 8 characters long
+  else if (newP.length < 8) {
+    alert("New password should be atleast 8 characters long")
+    return false;
+  }
+
+  // Checking if the new password has atleast one lowercase, uppercase, digit and special symbol
+  var passwordRegex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[\W_])/;
+  if (!passwordRegex.test(newP)) {
+    alert("New password must contain atleast one lowercase, one uppercase, one digit and one special symbol")
+    return false;
+  }
+
+  return true;
+}
+</script>
 {% endblock %}
