Improved search page

--- a/templates/search.html
+++ b/templates/search.html
@@ -10,7 +10,7 @@
         <h1>Search for dates, people and clues:</h1>
         <form action="/search" method="POST">
             <label for="search">Select what you want to search</label>
-            <select id="searchType">
+            <select id="searchType" required>
                 <option disabled selected>Select</option>
                 <option value="date">Date</option>
                 <option value="people">People</option>
